# graspp_2025_spring

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
data/examples/module_2/: ghg.csv
data/examples/module_3/: gini.csv  pisa.csv
notebooks/assignment_individual/HW1/: RachelHo_HW1.ipynb
notebooks/module_2/week_6/: pipeline_regression.ipynb
notebooks/module_3/: machine_learning.ipynb
notebooks/quiz/: quiz_1.ipynb
reports/: milestone_1.md
src/data/: download_worldbank.py
src/features/: generate_features.py
src/pipeline/: run_pipeline.py
src/viz/: plot_basic.py  streamlit_app.py
